--- a/packages/vscode-extension/src/controls/sampleDetailPage.scss
+++ b/packages/vscode-extension/src/controls/sampleDetailPage.scss
@@ -1,7 +1,7 @@
 .sampleDetail{
-    margin: 20px 100px;
-    min-width: 500px;
-    max-width: 800px;
+    margin: 20px auto;
+    min-width: 256px;
+    max-width: 1166px;
     color: var(--vscode-editor-foreground);
 
     button{
@@ -25,21 +25,32 @@
     }
 
     .header{
-        display: flex;
-        height: 32px;
+        display: grid;
+        grid-template-columns: auto max-content;
         margin: 44px 0 12px 0;
+
+        .contents{
+            min-width: 205px;
+            grid-column: 1/2;
+        }
 
         h2{
             font-size: 26px;
-            height: 32px;
-            margin: auto 0;
+            margin: auto 0 12px 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .buttons{
-            margin: auto 0 auto auto;
+            grid-column: 2/3;
+            margin: 0 0 auto auto;
+            display: flex;
 
             vscode-button{
                 margin-left: 8px;
+                margin-right: 0px;
+                width: max-content;
             }
         }
     }
@@ -84,10 +95,10 @@
         margin-bottom: 16px;
 
         .setting{
-          width: 16px;
-          height: 16px;
-          margin-top: auto;
-          margin-bottom: auto;
+            width: 16px;
+            height: 16px;
+            margin-top: auto;
+            margin-bottom: auto;
         }
     }
 
@@ -95,4 +106,41 @@
         margin-top: 16px;
         word-break: break-all;
     }
+}
+
+@media only screen and (max-width: 1366px) {
+  .sampleDetail{
+    margin: 20px 100px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .sampleDetail{
+    margin: 20px 32px;
+
+    .header{
+        grid-template-columns: 100%;
+
+        h2{
+            word-break: break-all;
+            overflow:inherit;
+            text-overflow:inherit;
+            white-space: normal;
+        }
+
+        .contents{
+            grid-column: 1/2;
+        }
+
+        .buttons{
+            margin: 12px auto auto 0;
+            grid-column: 1/2;
+    
+            vscode-button{
+                margin-left: 0px;
+                margin-right: 8px;
+            }
+        }
+    }
+  }
 }
