--- a/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
+++ b/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
@@ -45,7 +45,7 @@
             let s = item.split("="),
               k = s[0],
               v = s[1] && decodeURIComponent(s[1]);
-            hashParams[k] = v;
+            hashParams.set(k, v);
           });
         return hashParams;
       }
