--- a/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
+++ b/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
@@ -18,13 +18,13 @@
       microsoftTeams.initialize();
       let hashParams = getHashParameters();
 
-      if (hashParams["error"]) {
+      if (hashParams.get("error")) {
         // Authentication failed
-        handleAuthError(hashParams["error"], hashParams);
-      } else if (hashParams["code"]) {
+        handleAuthError(hashParams.get("error"), hashParams);
+      } else if (hashParams.get("code")) {
         // Get the stored state parameter and compare with incoming state
         let expectedState = localStorage.getItem("state");
-        if (expectedState !== hashParams["state"]) {
+        if (expectedState !== hashParams.get("state")) {
           // State does not match, report error
           handleAuthError("StateDoesNotMatch", hashParams);
         } else {
@@ -45,7 +45,7 @@
             let s = item.split("="),
               k = s[0],
               v = s[1] && decodeURIComponent(s[1]);
-            hashParams[k] = v;
+            hashParams.set(k, v);
           });
         return hashParams;
       }
