--- a/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
+++ b/packages/fx-core/templates/plugins/resource/aad/auth/bot/js/public/auth-end.html
@@ -53,8 +53,8 @@
       // Show error information
       function handleAuthError(errorType, errorMessage) {
         const err = JSON.stringify({
-          error: errorType,
-          message: JSON.stringify(errorMessage),
+          error: encodeURIComponent(errorType),
+          message: encodeURIComponent(JSON.stringify(errorMessage)),
         });
         let para = document.createElement("p");
         let node = document.createTextNode(err);
