--- a/templates/scenarios/ts/sso-tab/src/components/sample/Welcome.css
+++ b/templates/scenarios/ts/sso-tab/src/components/sample/Welcome.css
@@ -73,14 +73,18 @@ code {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-.contrast pre, .contrast code, .contrast div.error {
+.contrast pre,
+.contrast code,
+.contrast div.error {
   background-color: #000000;
   border-color: #ffffff;
   border-width: thin;
   border-style: solid;
 }
 
-.dark pre, .dark code, .dark div.error {
+.dark pre,
+.dark code,
+.dark div.error {
   background-color: #1b1b1b;
 }
 
