--- a/templates/scenarios/csharp/sso-tab/wwwroot/auth-end.html
+++ b/templates/scenarios/csharp/sso-tab/wwwroot/auth-end.html
@@ -69,7 +69,7 @@
             let s = item.split("="),
               k = s[0],
               v = s[1] && decodeURIComponent(s[1]);
-            hashParams.set(k, v);
+            hashParams[k] = v;
           });
         return hashParams;
       }
