--- a/templates/scenarios/ts/non-sso-tab/src/views/hello.html
+++ b/templates/scenarios/ts/non-sso-tab/src/views/hello.html
@@ -23,6 +23,7 @@
       </span>
     </div>
     <script type="text/javascript">
+      // Hide the loading indicator
       microsoftTeams.appInitialization.notifySuccess();
     </script>
   </body>
