--- a/packages/fx-core/templates/plugins/resource/aad/auth/V3/Tab/GetUserProfile.razor
+++ b/packages/fx-core/templates/plugins/resource/aad/auth/V3/Tab/GetUserProfile.razor
@@ -1,6 +1,7 @@
 @using System.IO
 @using Azure.Core
 @using Microsoft.Graph
+@using Microsoft.Graph.Models
 @inject TeamsFx teamsfx
 @inject TeamsUserCredential teamsUserCredential
 
@@ -45,7 +46,7 @@
         IsLoading = true;
         var graph = GetGraphServiceClient();
 
-        Profile = await graph.Me.Request().GetAsync();
+        Profile = await graph.Me.GetAsync();
 
         IsLoading = false;
         ErrorMessage = string.Empty;
