--- a/templates/scenarios/ts/sso-tab/src/components/sample/Welcome.css
+++ b/templates/scenarios/ts/sso-tab/src/components/sample/Welcome.css
@@ -1,5 +1,5 @@
 .narrow {
-  max-width: 900px;
+  width: 900px;
   margin: 0 auto;
 }
 
@@ -58,6 +58,7 @@ div.error {
   max-height: 200px;
   overflow-x: scroll;
   overflow-y: scroll;
+  max-width: 732px;
 }
 
 pre.fixed,
@@ -71,6 +72,11 @@ code {
   padding: 0px 6px;
   border-radius: 3px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+code::-webkit-scrollbar,
+pre::-webkit-scrollbar {
+  display: none;
 }
 
 .contrast pre,
