--- a/templates/scenarios/ts/non-sso-tab-default-bot/tab/src/index.css
+++ b/templates/scenarios/ts/non-sso-tab-default-bot/tab/src/index.css
@@ -9,3 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@media only screen and (max-width: 768px) {
+  body {
+    width: fit-content;
+  }
+}
